Quantum Brize link add

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               </div>
               <div class="col item social"><a href="https://www.facebook.com/profile.php?id=100087882332786" target="_blank"><i class="fa fa-facebook"></i></a><a href="https://www.instagram.com/smritichitrayan" target="_blank"><i class="fa fa-instagram"></i></a><a href="https://www.youtube.com/@smritichitrayan"  target="_blank"><i class="fa fa-youtube"></i></a><a href="https://wa.me/message/SYVSXVHJEQIPI1"  target="_blank"><i class="fa fa-whatsapp"></i></a></div>
           </div>
-          <p class="copyright">Smritichitrayan © 2023</p>
+          <p class="copyright">Smritichitrayan © 2023 develop by <a style="color: #EDF2F8;" target="_blank" href="http://quantumbrize.com/">Quantum Brize</a></p>
       </div>
   </footer>
 </div>
