--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="Pre-wedding">Pre Wedding</a>
         <a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="ceremony">Event</a>
         <a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="wedding">Wedding</a>
-        <a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="anni">Anniversery</a></div>
+        <a class="btn btn-outline-primary ww-filter-button" href="#" data-filter="anni">Anniversary</a></div>
       
       <div class="ww-gallery" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="0">
         <div class="card-columns">
